--- a/src/css/userInfo.css
+++ b/src/css/userInfo.css
@@ -41,6 +41,20 @@
   padding: 10px;
 }
 
+.userInfo .deleteButton {
+  background-color: #ffffff;
+  width: 90%;
+  margin: 20px 0;
+  padding: 10px;
+  border: transparent;
+  font-family: "Inter-Regular", Helvetica;
+  font-size: 48.1px;
+  font-weight: 400;
+  letter-spacing: 0;
+  line-height: normal;
+  cursor: pointer;
+}
+
 .userInfo .textWrapper {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
