--- a/src/css/payment.css
+++ b/src/css/payment.css
@@ -238,23 +238,23 @@ a {
   color: #999;
   position: absolute;
   left: 20px;
-  font-size: 12px;
-  margin-top: 13px;
+  font-size: 10px;
+  margin-top: 15px;
   font-weight: lighter;
 }
 
 .payment .smaller {
-  font-size: 10px;
+  font-size: 9px;
   color: #999;
   position: absolute;
   left: 20px;
   font-weight: lighter;
-  margin-top: 10px;
+  margin-top: 17px;
 }
 
 .payment .payList {
   height: 679px;
-  left: 450px;
+  left: 420px;
   position: absolute;
   top: 52px;
   width: 400px;
@@ -262,15 +262,23 @@ a {
 
 .payment .sum {
   position: absolute;
-  top: 15px;
+  top: 10px;
   right: 20px;
   font-size: large;
-  font-weight: 600;
+  font-weight: 400;
 }
 
 .payment .title5 .total {
   color: #e65054;
   font-weight: 600;
+  font-size: 20px;
+  top: 7px;
+}
+
+.payment .title5 .large {
+  font-weight: 600;
+  font-size: 18px;
+  top: 7px;
 }
 
 .payment .orderSumText {
@@ -279,10 +287,8 @@ a {
   font-size: 16px;
   font-weight: 400;
   left: 15px;
-  letter-spacing: 0;
-  line-height: normal;
   position: absolute;
-  top: 14px;
+  top: 9px;
   width: 190px;
 }
 
@@ -298,42 +304,53 @@ a {
   padding: 10px 50px;
   text-align: center;
   position: absolute;
-  left: -20px;
   width: 400px;
   font-size: 18.7px;
   font-weight: 600;
 }
 
-.payment .title2 {
+.payment .title1 {
   background-color: #eeeeee;
-  height: 50px;
+  height: 40px;
   position: absolute;
-  top: 20px;
+  width: 400px;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 18.7px;
+  font-weight: 600;
+  line-height: 40px;
+}
+
+.payment .title2 {
+  border: 1px solid #ccc;
+  height: 40px;
+  position: absolute;
+  top: 55px;
   width: 400px;
   border-radius: 5px;
 }
 
 .payment .title3 {
-  background-color: #eeeeee;
-  height: 50px;
+  border: 1px solid #ccc;
+  height: 40px;
   position: absolute;
-  top: 85px;
+  top: 110px;
   width: 400px;
   border-radius: 5px;
 }
 
 .payment .title4 {
-  background-color: #eeeeee;
-  height: 50px;
+  border: 1px solid #ccc;
+  height: 40px;
   position: absolute;
-  top: 152px;
+  top: 165px;
   width: 400px;
   border-radius: 5px;
 }
 
 .payment .title5 {
-  background-color: #eeeeee;
-  height: 50px;
+  border: 1px solid #ccc;
+  height: 40px;
   position: absolute;
   top: 220px;
   width: 400px;
@@ -341,10 +358,10 @@ a {
 }
 
 .payment .productBox {
-  height: 290px;
-  left: -20px;
+  height: 250px;
+
   position: absolute;
-  top: 400px;
+  top: 420px;
   width: 400px;
 }
 
@@ -366,7 +383,7 @@ a {
   height: 145px;
   position: relative;
   top: 40px;
-  right: 50px;
+  right: 30px;
   width: 400px;
 }
 
@@ -390,9 +407,11 @@ a {
   height: 145px;
   left: 140px;
   position: absolute;
-  width: 250px;
+  width: 260px;
   z-index: 10;
   border: 1px solid #eee;
+  border-top-right-radius: 10px;
+  border-botto-right-radius: 10px;
 }
 
 .payment .productName {
