--- a/src/css/cart.css
+++ b/src/css/cart.css
@@ -289,6 +289,19 @@
   top: 17px;
 }
 
+.cart .productSizeColor {
+  font-family: "Inter-Light", Helvetica;
+  font-size: 20px;
+  font-weight: 600;
+  height: 46px;
+  left: 980px;
+  letter-spacing: 0;
+  line-height: normal;
+  position: absolute;
+  text-align: center;
+  top: 17px
+}
+
 .cart .productPrice {
   color: #000000;
   font-family: "Inter-Light", Helvetica;
