--- a/src/css/payment.css
+++ b/src/css/payment.css
@@ -94,10 +94,9 @@ a {
 }
 
 .payment .addressBox {
-  /* background-color: #ffffff; */
   border: 1px solid #ddd;
   border-radius: 10px;
-  height: 111px;
+  height: 135px;
   left: 27px;
   position: absolute;
   top: 180px;
@@ -113,7 +112,7 @@ a {
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  top: 35px;
+  top: 20px;
   width: 219px;
 }
 
@@ -130,14 +129,47 @@ a {
   width: 280px;
 }
 
+.payment .mainAddressBox {
+  width: 100%;
+  height: 30px;
+  border-radius: 5px;
+  position: absolute;
+  font-size: 16px;
+  top: -10px;
+}
+
+.payment .detailAddressBox {
+  width: 100%;
+  height: 30px;
+  border-radius: 5px;
+  position: absolute;
+  font-size: 16px;
+  top: 20px;
+}
+
+.payment .btn-secondary {
+  display: inline-block;
+  position: absolute;
+  right: 50px;
+  top: -47px;
+  padding: 0 5px;
+}
+
+.payment .chooseBtn {
+  display: inline-block;
+  position: absolute;
+  right: 0;
+  top: -47px;
+  padding: 0 5px;
+}
+
 .payment .carryBox {
-  /* background-color: #ffffff; */
   border: 1px solid #ddd;
   border-radius: 10px;
-  height: 150px;
+  height: 130px;
   left: 27px;
   position: absolute;
-  top: 300px;
+  top: 325px;
   width: 331px;
 }
 
@@ -150,7 +182,7 @@ a {
   letter-spacing: 0;
   line-height: normal;
   position: relative;
-  top: 35px;
+  top: 16px;
   width: 254px;
 }
 
@@ -171,22 +203,23 @@ a {
 
 .payment .carryMessage8 {
   position: absolute;
-  top: 70px;
+  top: 65px;
   left: 0;
   border: none;
   width: 290px;
   height: 28px;
   text-decoration: underline;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 400;
+  padding-left: 5px;
 }
 
 .payment .howPayBox {
   background-color: #eee;
-  height: 222px;
+  height: 217px;
   left: 27px;
   position: absolute;
-  top: 460px;
+  top: 465px;
   width: 331px;
   border-radius: 10px;
 }
@@ -201,11 +234,18 @@ a {
   font-family: "Inter-Regular", Helvetica;
   font-size: 18px;
   font-weight: 600;
-  left: -20px;
+  left: 20px;
   position: absolute;
-  text-align: center;
-  top: 20px;
-  width: 228px;
+  top: 15px;
+  width: 150px;
+}
+
+.payment .paySelect {
+  color: tomato;
+  position: absolute;
+  right: -50px;
+  top: 0px;
+  font-size: smaller;
 }
 
 .payment .paymentBox {
@@ -213,7 +253,7 @@ a {
   justify-content: center;
   flex-wrap: wrap;
   height: 100px;
-  margin-top: 50px;
+  margin-top: 45px;
   align-items: center;
 }
 
@@ -249,7 +289,7 @@ a {
   position: absolute;
   left: 20px;
   font-weight: lighter;
-  margin-top: 17px;
+  margin-top: 10px;
 }
 
 .payment .payList {
@@ -262,17 +302,17 @@ a {
 
 .payment .sum {
   position: absolute;
-  top: 10px;
+  top: 5px;
   right: 20px;
   font-size: large;
   font-weight: 400;
 }
 
 .payment .title5 .total {
-  color: #e65054;
+  color: tomato;
   font-weight: 600;
   font-size: 20px;
-  top: 7px;
+  top: 5px;
 }
 
 .payment .title5 .large {
