--- a/src/css/payment.css
+++ b/src/css/payment.css
@@ -46,25 +46,24 @@ a {
   left: 20px;
   position: absolute;
   top: 52px;
-  width: 385px;
+  width: 400px;
 }
 
 .payment .carryInfo {
   text-align: center;
-  background-color: #eee;
-  border-radius: 10px;
-  margin: 0 25px;
-  padding: 10px;
+  position: absolute;
+  width: 400px;
+  font-size: 20px;
+  font-weight: 600;
 }
 
 .payment .emailBox {
   border: 1px solid #ddd;
   border-radius: 10px;
   height: 111px;
-  left: 27px;
   position: absolute;
   top: 60px;
-  width: 331px;
+  width: 100%;
 }
 
 .payment .email {
@@ -77,7 +76,7 @@ a {
   line-height: normal;
   position: absolute;
   top: 35px;
-  width: 248px;
+  width: 360px;
 }
 
 .payment .email2 {
@@ -90,17 +89,16 @@ a {
   line-height: normal;
   position: absolute;
   top: 60px;
-  width: 248px;
+  width: 360px;
 }
 
 .payment .addressBox {
   border: 1px solid #ddd;
   border-radius: 10px;
   height: 135px;
-  left: 27px;
   position: absolute;
   top: 180px;
-  width: 331px;
+  width: 100%;
 }
 
 .payment .address {
@@ -112,8 +110,8 @@ a {
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  top: 20px;
-  width: 219px;
+  top: 17px;
+  width: 360px;
 }
 
 .payment .address2 {
@@ -126,7 +124,7 @@ a {
   line-height: normal;
   position: absolute;
   top: 60px;
-  width: 280px;
+  width: 360px;
 }
 
 .payment .mainAddressBox {
@@ -135,7 +133,7 @@ a {
   border-radius: 5px;
   position: absolute;
   font-size: 16px;
-  top: -10px;
+  top: -5px;
 }
 
 .payment .detailAddressBox {
@@ -144,15 +142,19 @@ a {
   border-radius: 5px;
   position: absolute;
   font-size: 16px;
-  top: 20px;
+  top: 30px;
 }
 
 .payment .btn-secondary {
-  display: inline-block;
+  /* display: inline-block; */
   position: absolute;
   right: 50px;
   top: -47px;
   padding: 0 5px;
+}
+
+.payment .carrySelectBtn {
+  transform: translate(0%, 20%);
 }
 
 .payment .chooseBtn {
@@ -167,10 +169,9 @@ a {
   border: 1px solid #ddd;
   border-radius: 10px;
   height: 130px;
-  left: 27px;
   position: absolute;
   top: 325px;
-  width: 331px;
+  width: 100%;
 }
 
 .payment .carryRequest {
@@ -183,7 +184,7 @@ a {
   line-height: normal;
   position: relative;
   top: 16px;
-  width: 254px;
+  width: 360px;
 }
 
 .payment .carrySelect {
@@ -196,7 +197,7 @@ a {
   line-height: normal;
   position: absolute;
   top: 30px;
-  width: 290px;
+  width: 360px;
   height: 30px;
   border-radius: 5px;
 }
@@ -206,7 +207,7 @@ a {
   top: 65px;
   left: 0;
   border: none;
-  width: 290px;
+  width: 360px;
   height: 28px;
   text-decoration: underline;
   font-size: 14px;
@@ -217,10 +218,9 @@ a {
 .payment .howPayBox {
   background-color: #eee;
   height: 217px;
-  left: 27px;
   position: absolute;
   top: 465px;
-  width: 331px;
+  width: 100%;
   border-radius: 10px;
 }
 
@@ -237,13 +237,13 @@ a {
   left: 20px;
   position: absolute;
   top: 15px;
-  width: 150px;
+  width: 360px;
 }
 
 .payment .paySelect {
-  color: tomato;
+  color: #ff7d9e;
   position: absolute;
-  right: -50px;
+  right: 0;
   top: 0px;
   font-size: smaller;
 }
@@ -253,8 +253,13 @@ a {
   justify-content: center;
   flex-wrap: wrap;
   height: 100px;
-  margin-top: 45px;
+  margin-top: 50px;
   align-items: center;
+}
+
+.payment .paymentBox .item:hover {
+  background-color: #ff7d9e;
+  color: #fff;
 }
 
 .payment .paymentBox .item {
@@ -279,7 +284,7 @@ a {
   position: absolute;
   left: 20px;
   font-size: 10px;
-  margin-top: 15px;
+  margin-top: 10px;
   font-weight: lighter;
 }
 
@@ -289,7 +294,7 @@ a {
   position: absolute;
   left: 20px;
   font-weight: lighter;
-  margin-top: 10px;
+  margin-top: 5px;
 }
 
 .payment .payList {
@@ -309,7 +314,7 @@ a {
 }
 
 .payment .title5 .total {
-  color: tomato;
+  color: #ff7d9e;
   font-weight: 600;
   font-size: 20px;
   top: 5px;
@@ -339,26 +344,21 @@ a {
 }
 
 .payment .orderInfo {
-  background-color: #eee;
-  border-radius: 10px;
-  padding: 10px 50px;
   text-align: center;
   position: absolute;
   width: 400px;
-  font-size: 18.7px;
+  font-size: 20px;
   font-weight: 600;
+  left: 40px;
 }
 
 .payment .title1 {
-  background-color: #eeeeee;
-  height: 40px;
   position: absolute;
   width: 400px;
-  border-radius: 5px;
   text-align: center;
-  font-size: 18.7px;
+  font-size: 20px;
   font-weight: 600;
-  line-height: 40px;
+  left: 40px;
 }
 
 .payment .title2 {
@@ -368,6 +368,7 @@ a {
   top: 55px;
   width: 400px;
   border-radius: 5px;
+  left: 40px;
 }
 
 .payment .title3 {
@@ -377,6 +378,7 @@ a {
   top: 110px;
   width: 400px;
   border-radius: 5px;
+  left: 40px;
 }
 
 .payment .title4 {
@@ -386,6 +388,7 @@ a {
   top: 165px;
   width: 400px;
   border-radius: 5px;
+  left: 40px;
 }
 
 .payment .title5 {
@@ -395,11 +398,11 @@ a {
   top: 220px;
   width: 400px;
   border-radius: 5px;
+  left: 40px;
 }
 
 .payment .productBox {
   height: 250px;
-
   position: absolute;
   top: 420px;
   width: 400px;
@@ -407,8 +410,8 @@ a {
 
 .payment .moreButton {
   position: absolute;
-  left: 260px;
-  top: 15px;
+  left: 330px;
+  top: 22px;
   font-size: 10px;
   color: #eee;
   border: none;
@@ -416,6 +419,7 @@ a {
   width: 50px;
   height: 20px;
   border-radius: 5px;
+  z-index: 10;
 }
 
 .payment .product {
@@ -425,6 +429,7 @@ a {
   top: 40px;
   right: 30px;
   width: 400px;
+  left: 10px;
 }
 
 .payment .image {
@@ -451,7 +456,7 @@ a {
   z-index: 10;
   border: 1px solid #eee;
   border-top-right-radius: 10px;
-  border-botto-right-radius: 10px;
+  border-bottom-right-radius: 10px;
 }
 
 .payment .productName {
