--- a/src/css/productAdd.css
+++ b/src/css/productAdd.css
@@ -22,7 +22,7 @@
   width: 80%;
   min-height: 57px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   font-size: 32px;
 }
