--- a/src/css/productEdit.css
+++ b/src/css/productEdit.css
@@ -1,77 +1,98 @@
-.productAdd{background-color: hsl(0, 0%, 100%);}
-.productAdd .inner{}
-.productAdd .inner .wrap{display: flex;}
-.productAdd .inner .wrap {
-  display: flex; justify-content: space-between; align-items: center;
-  width: 100%; padding: 0 20px; margin: 20px 0;
+.productEdit {
+  background-color: hsl(0, 0%, 100%);
 }
-.productAdd .inner .wrap .title{
+.productEdit .inner {}
+.productEdit .inner .wrap {
+  display: flex;
+}
+.productEdit .inner .wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 0 20px;
+  margin: 20px 0;
+}
+.productEdit .inner .wrap .title {
   width: 20%;
   font-size: 32px;
 }
 
-.productAdd .inner .wrap .box{
-  display: flex; justify-content: space-between; align-items: center;
-  width: 15%; margin-left: 20px;
+.productEdit .inner .wrap .box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 15%;
+  margin-left: 20px;
 }
-.productAdd .inner .wrap .box .text{
-  font-size: 20px; font-weight: 600;
+.productEdit .inner .wrap .box .text {
+  font-size: 20px;
+  font-weight: 600;
 }
-.productAdd .inner .wrap .box input[type = "checkbox"]{
+.productEdit .inner .wrap .box input[type="checkbox"] {
   margin: 0 10px;
-  width: 50px; height: 50px;
+  width: 50px;
+  height: 50px;
   background-color: #eee;
 }
-.productAdd .inner .wrap input[type = "text"]{
+.productEdit .inner .wrap input[type="text"] {
   margin: 0 10px;
   height: 50px;
   width: 80%;
   background-color: #eee;
 }
 
-.productAdd .inner .wrap.stock select{
+.productEdit .inner .wrap.stock select {
   margin: 0 10px;
-  width: 100%; height: 50px;
+  width: 100%;
+  height: 50px;
   background-color: #fff;
 }
-.productAdd .inner .wrap.stock input{
+.productEdit .inner .wrap.stock input {
   margin: 0 10px;
   height: 50px;
   width: 100%;
   background-color: #fff;
 }
-.productAdd .inner .wrap.stock label{
+.productEdit .inner .wrap.stock label {
   font-size: 32px;
 }
-.productAdd .inner .wrap.img {
+.productEdit .inner .wrap.img {
   justify-content: flex-start;
 }
-.productAdd .inner .wrap.img .editImg{
-  padding: 20px;
-  margin-left: 80px;
-  background-color: #eee;
-  &:hover{
-    background-color: #ddd;
-    cursor: pointer;
-  }
-}
-.productAdd .inner .wrap.img input[type="file"]{
-  display: block;
-  width: 0; height: 0; overflow: hidden;
+.productEdit .inner .wrap.img .boxWrap label {
+  margin-left: 100px;
 }
 
-.productAdd .inner .wrap.description input{
+.productEdit .inner .wrap.img .boxWrap .addImg {
+  padding: 20px;
+
+  background-color: #eee;
+}
+
+.productEdit .inner .wrap.img .boxWrap .addImg:hover {
+  background-color: #ddd;
+  cursor: pointer;
+}
+
+.productEdit .inner .wrap.img input[type="file"] {
+  display: none;
+}
+
+.productEdit .inner .wrap.description input {
   height: 300px;
 }
-.productAdd .inner .btnForm{
-  display: flex; justify-content: center; align-items: center;
-  width: 100%; height: 200px;
+.productEdit .inner .btnForm {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 200px;
 }
-.productAdd .inner .btnForm button{
-  margin: 0 100px; padding: 10px;
+.productEdit .inner .btnForm button {
+  margin: 0 100px;
+  padding: 10px;
   width: 300px;
   font-size: 32px;
   border-radius: 20px;
 }
-
-
