--- a/src/css/passwordEdit.css
+++ b/src/css/passwordEdit.css
@@ -1,185 +1,160 @@
+*{margin:0; padding: 0; box-sizing: border-box;}
+ul, ol, li{list-style:none;}
+a{text-decoration:none;} 
+
 .changePassword {
-  background-color: #ffffff;
+  background-color: #f6f1eb;
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   width: 100%;
+  height: 100vh;
 }
 
 .changePassword .div {
-  background-color: #ffffff;
-  height: 1024px;
+  background-color: #fffcf7;
+  height: 524px;
   position: relative;
-  width: 1440px;
+  width: 640px;
+  border-radius: 10px;
+}
+
+.changePassword .div > .textWrapper::after{
+  content: '';
+  display: block;
+  width: 540px;
+  border: 1px solid #f6f1eb;
+  position: absolute;
+  top: 60px;
+  left: 115px;
 }
 
 .changePassword .textWrapper {
-  color: #000000;
+  color: #524747;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 44.1px;
+  font-size: 30px;
   font-weight: 400;
-  height: 129px;
-  left: 406px;
+  height: 95px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
   text-align: center;
-  top: 39px;
-  width: 633px;
+  top: 20px;
+  left: -70px;
+  width: 413px;
 }
 
 .changePassword .changePasswordBox {
-  background-color: #eeeeee;
-  height: 670px;
-  left: 278px;
+  background-color: #fffcf7;
+  height: 373px;
+  left: 0px;
   position: absolute;
-  top: 169px;
-  width: 905px;
+  top: 100px;
+  width: 408px;
 }
 
 .changePassword .inputBox {
-  background-color: #ffffff;
-  height: 312px;
-  left: 14px;
+  background-color: #fffcf7;
+  height: 178px;
+  left: 110px;
   position: absolute;
-  top: 78px;
-  width: 876px;
+  top: 10px;
+  width: 402px;
 }
 
 .changePassword .inputPassword {
-  background-color: #eeeeee;
-  height: 101px;
-  left: 30px;
+  background-color: #fffcf7;
+  height: 90px;
+  left: -70px;
   position: absolute;
-  top: 27px;
-  width: 815px;
+  top: 24px;
+  width: 400px;
 }
 
 .changePassword .textWrapper2 {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 29.8px;
+  font-size: 15px;
   font-weight: 400;
-  height: 63px;
-  left: 119px;
+  height: 40px;
+  left: 96px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  text-align: center;
-  top: 18px;
-  width: 573px;
+  text-align: left;
+  top: 15px;
+  width: 370px;
+  border: 1px solid #9d2a1e;
+  padding-left: 7px;
+  border-radius: 4px;
 }
 
 .changePassword .inputPasswordCheck {
-  background-color: #eeeeee;
-  height: 101px;
-  left: 30px;
+  background-color: #fffcf7;
+  height: 70px;
+  left: -70px;
   position: absolute;
-  top: 181px;
-  width: 815px;
+  top: 100px;
+  width: 400px;
 }
 
 .changePassword .textWrapper3 {
-  color: #000000;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 29.8px;
+  font-size: 15px;
   font-weight: 400;
-  height: 63px;
-  left: 119px;
+  height: 40px;
+  left: 96px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  text-align: center;
-  top: 17px;
-  width: 573px;
+  text-align: left;
+  top: 15px;
+  width: 370px;
+  border: 1px solid #9d2a1e;
+  padding-left: 7px;
+  border-radius: 4px;
 }
 
-.changePassword .inputNum {
-  background-color: #eeeeee;
-  height: 93px;
-  left: 30px;
-  position: absolute;
-  top: 370px;
-  width: 756px;
-}
-
-.changePassword .inputNumWrapper {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 27.6px;
-  font-weight: 400;
-  height: 58px;
-  left: 50px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 16px;
-  width: 492px;
-}
-
-.changePassword .inputNumButton {
-  background-color: #eeeeee;
-  height: 58px;
-  left: 585px;
-  position: absolute;
-  top: 16px;
-  width: 181px;
-}
 
 .changePassword .buttonBox {
-  background-color: #ffffff;
-  height: 173px;
-  left: 11px;
+  background-color: #fffcf7;
+  height: 154px;
+  left: 10px;
   position: absolute;
-  top: 450px;
-  width: 879px;
+  top: 200px;
+  width: 400px;
 }
 
 .changePassword .LinkButton {
-  background-color: #eeeeee;
-  height: 101px;
-  left: 51px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #4d4a4a;
+  height: 40px;
   position: absolute;
-  top: 32px;
-  width: 302px;
-}
-
-.changePassword .textWrapper4 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 29.8px;
-  font-weight: 400;
-  height: 62px;
-  left: 72px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 18px;
-  width: 145px;
+  top: 28px;
+  left: 150px;
+  width: 120px;
+  border-radius: 5px;
+  border: transparent;
+  color: #ffffff;
+  font-size: 12px;
 }
 
 .changePassword .cancelButton {
-  background-color: #eeeeee;
-  height: 101px;
-  left: 551px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #4d4a4a;
+  height: 40px;
+  left: 350px;
   position: absolute;
-  top: 32px;
-  width: 248px;
+  top: 28px;
+  width: 120px;
+  border-radius: 5px;
+  border: transparent;
+  color: #ffffff;
+  font-size: 12px;
 }
 
-.changePassword .textWrapper5 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 29.8px;
-  font-weight: 400;
-  height: 62px;
-  left: 34px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 18px;
-  width: 183px;
-}
