--- a/src/css/findPassword.css
+++ b/src/css/findPassword.css
@@ -1,194 +1,219 @@
+*{margin:0; padding: 0; box-sizing: border-box;}
+ul, ol, li{list-style:none;}
+a{text-decoration:none;} 
+
 .findPassword {
-  background-color: #ffffff;
+  background-color: #f6f1eb;
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   width: 100%;
+  height: 100vh;
 }
 
 .findPassword .div {
-  background-color: #ffffff;
-  height: 1024px;
+  background-color: #fffcf7;
+  height: 524px;
   position: relative;
-  width: 1440px;
+  width: 640px;
+  border-radius: 10px;
+}
+
+.findPassword .div > .textWrapper::after{
+  content: '';
+  display: block;
+  width: 540px;
+  border: 1px solid #f6f1eb;
+  position: absolute;
+  top: 60px;
+  left: 115px;
 }
 
 .findPassword .textWrapper {
-  color: #000000;
+  color: #524747;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 44.1px;
+  font-size: 30px;
   font-weight: 400;
-  height: 129px;
-  left: 406px;
+  height: 95px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
   text-align: center;
-  top: 39px;
-  width: 633px;
+  top: 20px;
+  left: -70px;
+  width: 413px;
 }
 
 .findPassword .findPasswordBox {
-  background-color: #eeeeee;
-  height: 870px;
-  left: 278px;
+  background-color: #fffcf7;
+  height: 373px;
+  left: 0px;
   position: absolute;
-  top: 169px;
-  width: 905px;
+  top: 100px;
+  width: 408px;
 }
 
 .findPassword .inputBox {
-  background-color: #ffffff;
-  height: 312px;
-  left: 14px;
+  background-color: #fffcf7;
+  height: 178px;
+  left: 110px;
   position: absolute;
-  top: 78px;
-  width: 876px;
+  top: 10px;
+  width: 402px;
 }
 
 .findPassword .inputUserid {
-  background-color: #eeeeee;
-  height: 101px;
-  left: 30px;
+  background-color: #fffcf7;
+  height: 90px;
+  left: -70px;
   position: absolute;
-  top: 27px;
-  width: 815px;
+  top: 24px;
+  width: 400px;
 }
 
 .findPassword .textWrapper2 {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 29.8px;
+  font-size: 15px;
   font-weight: 400;
-  height: 63px;
-  left: 119px;
+  height: 40px;
+  left: 96px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  text-align: center;
-  top: 18px;
-  width: 573px;
+  text-align: left;
+  top: 15px;
+  width: 370px;
+  border: 1px solid #9d2a1e;
+  padding-left: 7px;
+  border-radius: 4px;
 }
 
 .findPassword .inputUserEmail {
-  background-color: #eeeeee;
-  height: 101px;
-  left: 30px;
+  background-color: #fffcf7;
+  height: 70px;
+  left: -70px;
   position: absolute;
-  top: 181px;
-  width: 815px;
+  top: 100px;
+  width: 400px;
 }
 
 .findPassword .textWrapper3 {
-  color: #000000;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 29.8px;
+  font-size: 15px;
   font-weight: 400;
-  height: 63px;
-  left: 119px;
+  height: 40px;
+  left: 96px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  text-align: center;
-  top: 17px;
-  width: 573px;
+  text-align: left;
+  top: 15px;
+  width: 370px;
+  border: 1px solid #9d2a1e;
+  padding-left: 7px;
+  border-radius: 4px;
 }
 
 .findPassword .emailButton {
-  background-color: #eeeeee;
-  height: 62px;
-  left: 715px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #4d4a4a;
+  height: 40px;
   position: absolute;
-  top: 17px;
-  width: 81px;
+  top: 15px;
+  left: 388px;
+  width: 80px;
+  border-radius: 5px;
+  border: transparent;
+  color: #ffffff;
+  font-size: 10px;
 }
 
 .findPassword .inputNum {
-  background-color: #eeeeee;
-  height: 93px;
-  left: 30px;
+  background-color: #fffcf7;
+  height: 90px;
+  left: -70px;
   position: absolute;
-  top: 370px;
-  width: 756px;
+  top: 180px;
+  width: 400px; 
 }
 
 .findPassword .inputNumWrapper {
   color: #000000;
   font-family: "Inter-Regular", Helvetica;
-  font-size: 27.6px;
+  font-size: 15px;
   font-weight: 400;
-  height: 58px;
-  left: 50px;
+  height: 40px;
+  left: 96px;
   letter-spacing: 0;
   line-height: normal;
   position: absolute;
-  text-align: center;
-  top: 16px;
-  width: 492px;
+  text-align: left;
+  top: 15px;
+  width: 370px;
+  border: 1px solid #9d2a1e;
+  padding-left: 7px;
+  border-radius: 4px;
 }
 
 .findPassword .inputNumButton {
-  background-color: #eeeeee;
-  height: 58px;
-  left: 585px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #4d4a4a;
+  height: 40px;
   position: absolute;
-  top: 16px;
-  width: 181px;
+  top: 15px;
+  left: 388px;
+  width: 80px;
+  border-radius: 5px;
+  border: transparent;
+  color: #ffffff;
+  font-size: 10px;
 }
 
 .findPassword .buttonBox {
-  background-color: #ffffff;
-  height: 173px;
-  left: 11px;
+  background-color: #fffcf7;
+  height: 154px;
+  left: 10px;
   position: absolute;
-  top: 610px;
-  width: 879px;
+  top: 200px;
+  width: 400px;
 }
 
 .findPassword .LinkButton {
-  background-color: #eeeeee;
-  height: 101px;
-  left: 51px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #4d4a4a;
+  height: 40px;
   position: absolute;
-  top: 32px;
-  width: 302px;
+  top: 28px;
+  left: 150px;
+  width: 120px;
+  border-radius: 5px;
+  border: transparent;
+  color: #ffffff;
+  font-size: 12px;
 }
 
-.findPassword .textWrapper4 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 29.8px;
-  font-weight: 400;
-  height: 62px;
-  left: 72px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 18px;
-  width: 145px;
-}
+
 
 .findPassword .cancelButton {
-  background-color: #eeeeee;
-  height: 101px;
-  left: 551px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #4d4a4a;
+  height: 40px;
+  left: 350px;
   position: absolute;
-  top: 32px;
-  width: 248px;
-}
-
-.findPassword .textWrapper5 {
-  color: #000000;
-  font-family: "Inter-Regular", Helvetica;
-  font-size: 29.8px;
-  font-weight: 400;
-  height: 62px;
-  left: 34px;
-  letter-spacing: 0;
-  line-height: normal;
-  position: absolute;
-  text-align: center;
-  top: 18px;
-  width: 183px;
+  top: 28px;
+  width: 120px;
+  border-radius: 5px;
+  border: transparent;
+  color: #ffffff;
+  font-size: 12px;
 }
