productAdd에서 productOption 컴포넌트 만든 후 + 버튼에 따라 추가할 수 있도록 기능 만드는 중

--- a/src/css/productAdd.css
+++ b/src/css/productAdd.css
@@ -5,9 +5,6 @@
 }
 .productAdd .inner .wrap {
   display: flex;
-}
-.productAdd .inner .wrap {
-  display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
@@ -22,7 +19,7 @@
   width: 80%;
   min-height: 57px;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   font-size: 32px;
 }
