--- a/src/css/productAdd.css
+++ b/src/css/productAdd.css
@@ -32,7 +32,7 @@
   justify-content: space-between;
   align-items: center;
   width: 15%;
-  margin-left: 20px;
+  margin-left: 55px;
 }
 .productAdd .inner .wrap .box .text {
   font-size: 20px;
@@ -51,8 +51,13 @@
   background-color: #eee;
 }
 
+.productAdd .inner .wrap.stock {
+  justify-content: flex-end;
+  flex-wrap: wrap;
+}
 .productAdd .inner .wrap.stock .boxWrap {
   justify-content: space-between;
+  margin: 0 0 10px 0;
 }
 .productAdd .inner .wrap.stock .boxWrap .box {
   margin: 0 10px;
@@ -60,6 +65,7 @@
   height: 50px;
   background-color: #fff;
 }
+
 .productAdd .inner .wrap.stock select {
   margin: 0 10px;
   width: 100%;
@@ -75,6 +81,15 @@
 .productAdd .inner .wrap.stock label {
   font-size: 32px;
 }
+.productAdd .inner .wrap.stock .title .btn {
+  padding: 10px 15px; margin-left: 20px;
+  background-color: #eee;
+}
+.productAdd .inner .wrap.stock .btn {
+  padding: 10px 15px;
+  background-color: #eee;
+}
+
 .productAdd .inner .wrap.img {
   justify-content: flex-start;
 }
@@ -82,6 +97,7 @@
   justify-content: flex-start;
   flex-flow: wrap;
 }
+
 .productAdd .inner .wrap.img .boxWrap .addImg {
   padding: 20px;
   margin-left: 100px;
